--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<p>
 			I'm passionate about fashion, I love discovering new cultures and that's why I travel a lot, I also love reading and dancing♡
 		</p>
-		<a href="file:///Users/sibylle/Documents/entreprenariat/pre%CC%81sentation.pdf"	target="_blank"	class="btn-red">Discover my profile</a>
+		<a href="images/presentation.pdf"	target="_blank"	class="btn-red">Discover my profile</a>
  	</div>
 
  	<div class="card-white">
